moves time blocks into jquery from hard coded html

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-    <div class="container row">
-            <div class="time-block col-md-2">9am</div>
+    <div class="container">
+        <!-- <div class="row">
+            <!-- <div class="time-block col-md-2">9am</div>
             <div class="hour form-group form-inline col-md-8">
                 <input type="text" class="flex-fill"/>
             </div>
             <div class="saveBtn col-md-2">
-                <button type="submit" class="col-sm-2">ß</button>
-            </div>
+                <button type="submit" class="col-sm-2"></button>
+            </div> -->
+        </div> -->
     </div>
 
 
