--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <title>Work Day Scheduler</title>
   </head>
 
+  <!-- headed with aread for current date to display -->
   <body>
     <header class="jumbotron">
       <h1 class="display-4">Work Day Scheduler</h1>
@@ -29,10 +30,9 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
+    <!-- empty container to add divs, row, textarea, and button to -->
     <div class="container">
- -->
 
-        
     </div>
 
 
